--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BolsaData"></activity>
+        <activity
+            android:name=".ui.BolsaData"
+            android:screenOrientation="landscape" />
         <activity
             android:name=".ui.PokedexData"
             android:screenOrientation="landscape" />
